📃 docs: add TODO

--- a/src/components/Header/Link.astro
+++ b/src/components/Header/Link.astro
@@ -28,6 +28,7 @@ const sectionId = href.replace('#','');
   
 </script>
 <!-- TODO: change shadow -->
+<!-- TODO: dont use id to identify the element -->
 <a
   id={`link-${sectionId}`}
   class="p-1 text-[var(--default-font-color)] no-underline transition-all duration-200 ease-in-out hover:text-[var(--default-secundary-font-color)] hover:drop-shadow-[0rem_0rem_1rem_aqua] [&.active]:drop-shadow-[0rem_0rem_0.5rem_aqua] [&.active]:text-[var(--default-secundary-font-color)] change-sidebar"
