🐞 fix: change reveal class

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -4,7 +4,7 @@ import Subtitle from "./shared/Subtitle.astro";
 
 <section id="aboutMe" class="h-screen">
   <div class="flex flex-col justify-center h-[90%] p-4">
-    <header>
+    <header class="reveal">
       <Subtitle left>About me</Subtitle>
     </header>
     <p class="reveal">
