--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -8,9 +8,9 @@ import IconElement from "../shared/IconElement.astro";
   <nav class="top-0 w-full fixed z-[4] backdrop-blur shadow-lg shadow-black">
     <ul class="flex flex-row justify-between m-0 p-0.5 [&>li]:self-center max-sm:hidden list-none">
       <li id="home" class="p-1">
-        <a href="#" aria-label="Go to the presentation section">
+        <Link href="#">
           <IconElement iconType="house" height="h-6" width="w-7" />
-        </a>
+        </Link>
       </li>
       <li class="mx-2">
         <Link href="#work">Work</Link>
