--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -1,4 +1,4 @@
-<section class=" h-screen">
+<section id="home" class="h-screen">
   <div class="text-[var(--default-font-color)] p-4 font-lato">
     <div class="reveal">
       <h1
