--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -3,11 +3,10 @@ import Link from "./Link.astro";
 import SideBarLink from "./SideBarLink.astro";
 import IconElement from "../shared/IconElement.astro";
 ---
-<!-- TODO: mark the link is you visite that page -->
 <header>
   <nav class="top-0 w-full fixed z-[4] backdrop-blur shadow-lg shadow-black">
     <ul class="flex flex-row justify-between m-0 p-0.5 [&>li]:self-center max-sm:hidden list-none">
-      <li id="home" class="p-1">
+      <li class="p-1">
         <Link href="#">
           <IconElement iconType="house" height="h-6" width="w-7" />
         </Link>
