--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -1,53 +1,54 @@
 ---
-import Contact from "./Contact.astro";
-import Subtitle from "../shared/Subtitle.astro";
-import CustomLink from "../shared/CustomLink.astro";
+import Contact from './Contact.astro';
+import Subtitle from '../shared/Subtitle.astro';
+import CustomLink from '../shared/CustomLink.astro';
 ---
 
 <footer>
-  <div class="grid h-screen">
-    <div id="contact" class="flex flex-col justify-center">
-      <div class="reveal">
-        <Subtitle center>Contact</Subtitle>
-        <address class="text-center">
-          <Contact
-            href="mailto:rodriguezcuelloc@gmail.com"
-            title="contact via this email address"
-            iconType="google"
-          />
-          <Contact
-            href="https://github.com/carlosjorger"
-            title="See my github profile"
-            iconType="github"
-          />
-          <Contact
-            href="https://www.linkedin.com/in/carlosjorger/"
-            title="See my linkedin profile and connect with me"
-            iconType="linkedin"
-          />
-          <Contact
-            href="https://twitter.com/carlosjorgerc"
-            title="See my twitter profile and follow me"
-            iconType="twitter"
-          />
-        </address>
-      </div>
-      
-    </div>
-    <div
-      class="text-[var(--default-font-color)] font-lato flex flex-col justify-center"
-    >
-      <p class="text-center text-xl my-0 mx-auto reveal">
-        <strong class="inline italic">© 2022 Carlos Jorge</strong>
-        <br />
-        <CustomLink href="https://github.com/carlosjorger/carlosjorger.github.io">
-          Published
-        </CustomLink>
-        in
-        <CustomLink href="https://pages.github.com/">
-          Github Page
-        </CustomLink>
-      </p>
-    </div>
-  </div>
+	<div class="grid h-screen">
+		<div id="contact" class="flex flex-col justify-center">
+			<div class="reveal">
+				<Subtitle center>Contact</Subtitle>
+				<address class="text-center">
+					<Contact
+						href="mailto:rodriguezcuelloc@gmail.com"
+						title="contact via this email address"
+						iconType="google"
+					/>
+					<Contact
+						href="https://github.com/carlosjorger"
+						title="See my github profile"
+						iconType="github"
+					/>
+					<Contact
+						href="https://www.linkedin.com/in/carlosjorger/"
+						title="See my linkedin profile and connect with me"
+						iconType="linkedin"
+					/>
+					<Contact
+						href="https://twitter.com/carlosjorgerc"
+						title="See my twitter profile and follow me"
+						iconType="twitter"
+					/>
+				</address>
+			</div>
+		</div>
+		<div
+			class="flex flex-col justify-center font-lato text-[var(--default-font-color)]"
+		>
+			<p class="reveal mx-auto my-0 text-center text-xl">
+				<strong class="inline italic">© 2022 Carlos Jorge</strong>
+				<br />
+				<CustomLink
+					href="https://github.com/carlosjorger/carlosjorger.github.io"
+				>
+					Published
+				</CustomLink>
+				 in
+				<CustomLink href="https://pages.github.com/">
+					Github Page
+				</CustomLink>
+			</p>
+		</div>
+	</div>
 </footer>
