--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -1,22 +1,23 @@
 <section id="home" class="h-screen">
-  <div class="text-[var(--default-font-color)] p-4 font-lato">
-    <div class="reveal">
-      <h1
-        class="animate-presentation-title text-4xl text-[var(--default-secundary-font-color)] my-3 mx-0"
-      >
-        Hi, I am <br class="hidden max-sm:inline" />Carlos Jorge, <br />
-        Web developer!
-      </h1>
-    </div>
-    <div class="reveal">
-      <h2 class="animate-presentation-main-skill text-3xl my-3 mx-0">
-        Welcome to my personal portfolio!
-      </h2>
-    </div>
-    <div class="reveal">
-      <p class="animate-presentation-description my-3 mx-0">
-        Cuban computer science from Havana University. Currently working as full-stack engineer building .net and Vuejs applications.
-      </p>
-    </div>
-  </div>
+	<div class="p-4 font-lato text-[var(--default-font-color)]">
+		<div class="reveal">
+			<h1
+				class="mx-0 my-3 animate-presentation-title text-4xl text-[var(--default-secundary-font-color)]"
+			>
+				Hi, I am <br class="hidden max-sm:inline" />Carlos Jorge, <br />
+				 Web developer!
+			</h1>
+		</div>
+		<div class="reveal">
+			<h2 class="mx-0 my-3 animate-presentation-main-skill text-3xl">
+				Welcome to my personal portfolio!
+			</h2>
+		</div>
+		<div class="reveal">
+			<p class="mx-0 my-3 animate-presentation-description">
+				Cuban computer science from Havana University. Currently working
+				as full-stack engineer building .net and Vuejs applications.
+			</p>
+		</div>
+	</div>
 </section>
