--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,24 +1,24 @@
 ---
-import Subtitle from "./shared/Subtitle.astro";
+import Subtitle from './shared/Subtitle.astro';
 ---
 
 <section id="aboutMe" class="h-screen">
-  <div class="flex flex-col justify-center h-[90%] p-4">
-    <header class="reveal">
-      <Subtitle left>About me</Subtitle>
-    </header>
-    <p class="reveal">
-      Hello, My name is Carlos Jorge. I'm a full-stack engineer that enjoy
-      coding on and off the work. I started working as a backend developer in
-      2020 using .net technologies and sql server.
-    </p>
-    <p class="reveal">
-      Currently, I'm also working on frontend technologies like angular, vue,
-      html, css.
-    </p>
-    <p class="reveal">
-      In my free time I like listening to music, reading books or watching
-      movies from favorite directors.
-    </p>
-  </div>
+	<div class="flex h-[90%] flex-col justify-center p-4">
+		<header class="reveal">
+			<Subtitle left>About me</Subtitle>
+		</header>
+		<p class="reveal">
+			Hello, My name is Carlos Jorge. I'm a full-stack engineer that enjoy
+			coding on and off the work. I started working as a backend developer
+			in 2020 using .net technologies and sql server.
+		</p>
+		<p class="reveal">
+			Currently, I'm also working on frontend technologies like angular,
+			vue, html, css.
+		</p>
+		<p class="reveal">
+			In my free time I like listening to music, reading books or watching
+			movies from favorite directors.
+		</p>
+	</div>
 </section>
