--- a/src/components/Header/SideBarLink.astro
+++ b/src/components/Header/SideBarLink.astro
@@ -1,19 +1,19 @@
 ---
-import Link from "./Link.astro";
-import IconElement from "../shared/IconElement.astro";
+import Link from './Link.astro';
+import IconElement from '../shared/IconElement.astro';
 export interface Props {
-  iconType: string;
-  href: string;
-  label: string;
+	iconType: string;
+	href: string;
+	label: string;
 }
 const { iconType, href, label } = Astro.props;
 ---
 
 <li
-  class="flex w-40 p-2 items-center justify-start transition-colors ease-in-out active:bg-[#241c2d]"
+	class="flex w-40 items-center justify-start p-2 transition-colors ease-in-out active:bg-[#241c2d]"
 >
-  <IconElement iconType={iconType} height="h-6" width="w-6" />
-  <Link href={href}>
-    <h2 class="pl-1">{label}</h2>
-  </Link>
+	<IconElement iconType={iconType} height="h-6" width="w-6" />
+	<Link href={href}>
+		<h2 class="pl-1">{label}</h2>
+	</Link>
 </li>
