--- a/src/components/Work/Project.astro
+++ b/src/components/Work/Project.astro
@@ -1,28 +1,28 @@
 ---
-import IconElement from "../shared/IconElement.astro";
+import IconElement from '../shared/IconElement.astro';
 export interface Props {
-  id: string;
-  title: string;
-  description: string;
-  anchorLabel: string;
-  githubLink: string;
+	id: string;
+	title: string;
+	description: string;
+	anchorLabel: string;
+	githubLink: string;
 }
 const { id, title, description, anchorLabel, githubLink } = Astro.props;
 ---
 
 <article
-  id={id}
-  class="self-start font-lato p-1 m-2 md:w-[65%] sm:w-[70%] flex flex-col bg-[#322644] rounded border-solid border-[0.1rem] border-[var(--default-secundary-font-color)] shadow-lg shadow-black reveal"
+	id={id}
+	class="reveal m-2 flex flex-col self-start rounded border-[0.1rem] border-solid border-[var(--default-secundary-font-color)] bg-[#322644] p-1 font-lato shadow-lg shadow-black sm:w-[70%] md:w-[65%]"
 >
-  <header class="text-[var(--default-font-color)] p-2">
-    <h3 class="m-0">{title}</h3>
-  </header>
-  <div class="p-2 text-[#99F9F9] text-xs">
-    <p>{description}</p>
-  </div>
-  <div class="flex self-end">
-    <a href={githubLink} aria-label={anchorLabel} class="h-7"
-      ><IconElement height="h-auto" width="w-6" iconType="github" /></a
-    >
-  </div>
+	<header class="p-2 text-[var(--default-font-color)]">
+		<h3 class="m-0">{title}</h3>
+	</header>
+	<div class="p-2 text-xs text-[#99F9F9]">
+		<p>{description}</p>
+	</div>
+	<div class="flex self-end">
+		<a href={githubLink} aria-label={anchorLabel} class="h-7"
+			><IconElement height="h-auto" width="w-6" iconType="github" /></a
+		>
+	</div>
 </article>
