--- a/src/components/shared/CustomLink.astro
+++ b/src/components/shared/CustomLink.astro
@@ -1,9 +1,13 @@
 ---
 export interface Props {
-  href:string
+	href: string;
 }
-const { href = ''} = Astro.props;
+const { href = '' } = Astro.props;
 ---
-<a class="active:bg-transparent visited:text-teal-300 hover:bg-[length:100%_15%] text-teal-300 no-underline bg-[length:0%_15%] bg-no-repeat bg-[0%_100%] bg-gradient-to-r from-teal-300 to-teal-300 transition-all duration-300 ease-out hover:ease-in-out" href={href}>
-    <slot/>
+
+<a
+	class="bg-gradient-to-r from-teal-300 to-teal-300 bg-[length:0%_15%] bg-[0%_100%] bg-no-repeat text-teal-300 no-underline transition-all duration-300 ease-out visited:text-teal-300 hover:bg-[length:100%_15%] hover:ease-in-out active:bg-transparent"
+	href={href}
+>
+	<slot />
 </a>
