--- a/src/components/shared/IconElement.astro
+++ b/src/components/shared/IconElement.astro
@@ -1,23 +1,19 @@
 ---
-import { Icon } from "astro-icon";
+import { Icon } from 'astro-icon';
 
 export interface Props {
-  id?: string;
-  iconType: string;
-  height: string;
-  width: string;
+	id?: string;
+	iconType: string;
+	height: string;
+	width: string;
 }
 const { iconType, height, width, id = undefined } = Astro.props;
 ---
 
 <i
-  id={id}
-  class= "text-teal-300 hover:text-black hover:transition-all hover:duration-500 hover:drop-shadow-[0rem_0rem_1rem_aqua] ease-in-out inline-block bg-no-repeat change-sidebar m-0.5"
-  class:list={[
-    height,
-    width,
-    iconType,
-  ]}
+	id={id}
+	class="change-sidebar m-0.5 inline-block bg-no-repeat text-teal-300 ease-in-out hover:text-black hover:drop-shadow-[0rem_0rem_1rem_aqua] hover:transition-all hover:duration-500"
+	class:list={[height, width, iconType]}
 >
-  <Icon name={iconType} />
+	<Icon name={iconType} />
 </i>
