--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,8 @@
 ---
-import "../styles/styles.css";
+import '../styles/styles.css';
 
 export interface Props {
-  title: string;
+	title: string;
 }
 
 const { title } = Astro.props;
@@ -10,59 +10,62 @@ const { title } = Astro.props;
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <meta
-      name="description"
-      content="Carlos Jorge's personal portfolio. I show my most important github projects. The main goals of these projects is having fun and learn new technologies, good practices and try to make real creative ideas"
-    />
-    <meta
-      name="keywords"
-      content="HTML,CSS,JavaScript,Github,Repository,Portfolio,Website,Github Page"
-    />
-    <meta name="author" content="carlosjorger" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:locale" content="en_US" />
-    <meta property="og:url" content="https://carlosjorger.github.io" />
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:title"
-      content="Carlos Jorge's personal portfolio website"
-    />
-    <meta
-      property="og:description"
-      content="Carlos Jorge's personal portfolio website. I show my most important github projects. The main goals of these projects is having fun and learn new technologies, good practices and try to make real creative ideas"
-    />
-    <meta
-      property="og:site_name"
-      content="Carlos Jorge's personal portfolio website"
-    />
-    <meta property="og:image" content="https://carlosjorger.github.io/images/purple-logo.png" />
-    <meta
-      property="twitter:description"
-      content="Carlos Jorge's personal portfolio website. I show my most important github projects. The main goals of these projects is having fun and learn new technologies, good practices and try to make real creative ideas"
-    />
-    <meta
-      property="twitter:title"
-      content="Carlos Jorge's personal portfolio website"
-    />
-    <link rel="icon" type="image/svg+xml" href="/images/favicon.png" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      rel="preload"
-      href="https://fonts.googleapis.com/css?family=Lato:400&display=swap"
-      as="font"
-    />
-    <link
-      rel="preload"
-      as="font"
-      href="https://fonts.googleapis.com/css?family=Lato:400italic%27&display=swap"
-    />
-    <meta name="generator" content={Astro.generator} />
-    <title>{title}</title>
-  </head>
-  <body>
-    <slot />
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width" />
+		<meta
+			name="description"
+			content="Carlos Jorge's personal portfolio. I show my most important github projects. The main goals of these projects is having fun and learn new technologies, good practices and try to make real creative ideas"
+		/>
+		<meta
+			name="keywords"
+			content="HTML,CSS,JavaScript,Github,Repository,Portfolio,Website,Github Page"
+		/>
+		<meta name="author" content="carlosjorger" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta property="og:locale" content="en_US" />
+		<meta property="og:url" content="https://carlosjorger.github.io" />
+		<meta property="og:type" content="website" />
+		<meta
+			property="og:title"
+			content="Carlos Jorge's personal portfolio website"
+		/>
+		<meta
+			property="og:description"
+			content="Carlos Jorge's personal portfolio website. I show my most important github projects. The main goals of these projects is having fun and learn new technologies, good practices and try to make real creative ideas"
+		/>
+		<meta
+			property="og:site_name"
+			content="Carlos Jorge's personal portfolio website"
+		/>
+		<meta
+			property="og:image"
+			content="https://carlosjorger.github.io/images/purple-logo.png"
+		/>
+		<meta
+			property="twitter:description"
+			content="Carlos Jorge's personal portfolio website. I show my most important github projects. The main goals of these projects is having fun and learn new technologies, good practices and try to make real creative ideas"
+		/>
+		<meta
+			property="twitter:title"
+			content="Carlos Jorge's personal portfolio website"
+		/>
+		<link rel="icon" type="image/svg+xml" href="/images/favicon.png" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			rel="preload"
+			href="https://fonts.googleapis.com/css?family=Lato:400&display=swap"
+			as="font"
+		/>
+		<link
+			rel="preload"
+			as="font"
+			href="https://fonts.googleapis.com/css?family=Lato:400italic%27&display=swap"
+		/>
+		<meta name="generator" content={Astro.generator} />
+		<title>{title}</title>
+	</head>
+	<body>
+		<slot />
+	</body>
 </html>
