📃 docs: add TODO

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,8 +26,7 @@ import Presentation from '../components/Presentation.astro';
 <Layout title="Carlos Jorge's personal portfolio website">
 	<Header />
 	<main>
-		<!-- TODO: Add Scroll Snap Mandatory -->
-		<!-- https://midu.dev/css-scroll-snap-la-solucion-definitiva-a-la-creacion-de-sliders-en-la-web/ -->
+		<!-- TODO: apply scroll-timeline -->
 		<Presentation />
 		<Work />
 		<AboutMe />
