--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -54,11 +54,20 @@ a {
 	transform: translate(0vh, -3vh);
 }
 .reveal {
-	opacity: 1 !important;
-	transition: all 500ms ease-out;
-	transform: translate(0vh, 0vh);
+	animation: reveal-animation linear both;
+	animation-timeline: view();
+	animation-range: entry 20% cover 35%;
 }
-
+@keyframes reveal-animation {
+	from {
+		opacity: 0;
+		transform: translate(0vh, 15vh);
+	}
+	to {
+		opacity: 1;
+		transform: translate(0vh, 0);
+	}
+}
 /* || SITEWIDE */
 
 @keyframes show-presentation-main-skill {
