--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -14,7 +14,9 @@
 			</h2>
 		</div>
 		<div class="reveal">
-			<p class="mx-0 my-3 animate-presentation-description">
+			<p
+				class="mx-0 my-3 animate-presentation-description text-[var(--default-font-color2)]"
+			>
 				Cuban computer science from Havana University. Currently working
 				as full-stack engineer building .net and Vuejs applications.
 			</p>
