🦄 refactor: create CustomParagraph

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,5 +1,6 @@
 ---
 import Subtitle from './shared/Subtitle.astro';
+import CustomParagraph from './shared/CustomParagraph.astro';
 ---
 
 <section id="aboutMe" class="h-screen">
@@ -7,18 +8,18 @@ import Subtitle from './shared/Subtitle.astro';
 		<header class="reveal">
 			<Subtitle left>About me</Subtitle>
 		</header>
-		<p class="reveal">
+		<CustomParagraph>
 			Hello, My name is Carlos Jorge. I'm a full-stack engineer that enjoy
 			coding on and off the work. I started working as a backend developer
 			in 2020 using .net technologies and sql server.
-		</p>
-		<p class="reveal">
+		</CustomParagraph>
+		<CustomParagraph>
 			Currently, I'm also working on frontend technologies like angular,
 			vue, html, css.
-		</p>
-		<p class="reveal">
+		</CustomParagraph>
+		<CustomParagraph>
 			In my free time I like listening to music, reading books or watching
 			movies from favorite directors.
-		</p>
+		</CustomParagraph>
 	</div>
 </section>
